# lps

./: .gitignore  README.md  pyproject.toml  todo.txt
conf/: example.yaml
lps/: aerodrome.py  contracts.py  erc20.py  hedger.py  hl_hedger.py  main.py  simulate.py  stats.py
lps/connectors/: abs.py  base.py  binance.py  hl.py  mock_cex.py
lps/utils/: config.py  v3_math.py
notes/: executor.py  tmp_ql_queries.py
resources/abis/: aerodrome_cl_factory.json  aerodrome_cl_gauge.json  aerodrome_cl_pool.json  aerodrome_nft_manager.json  aerodrome_sugar.json  vfat_nft_farm_strategy_v1.json  vfat_nft_farm_strategy_v2.json
resources/notes/: executor.py  todo.txt
tests/: conftest.py  test_hedger.py
